--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
+      minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
+      officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
+    </p>
   </body>
 </html>
