Pridany nadpis h2 a odsek text - upravena farba pozadaia stranky

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
       minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
       officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
     </p>
+    <h2>Nejaky nadpis</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
+    </p>
   </body>
 </html>
