Pridany subor .gitignore

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h2>Nejaky nadpis</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
+      minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
+      officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
     </p>
+    <h2>Nejaky nadpis</h2>
   </body>
 </html>
