Upraveny nadpis urovne h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello Java</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
       minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
