--- a/index.html
+++ b/index.html
@@ -8,19 +8,14 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1>Hello Java</h1>
+    <h1>Introduction to Java</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
       minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
       officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
     </p>
     <h2>Nejaky nadpis</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
-      minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
-      officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
-    </p>
-    <h2>Nejaky nadpis</h2>
+
+    <h3>Nejaky nadpis</h3>
   </body>
 </html>
