--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1>Hello Java</h1>
+    <h1>Java Basics</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
       minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
@@ -22,5 +22,18 @@
       officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
     </p>
     <h2>Nejaky nadpis</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
+      minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
+      officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
+      minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
+      officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
+    </p>
+    <h3>Data types</h3>
   </body>
 </html>
