--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       minima autem in ut esse, similique voluptas impedit nesciunt libero rem,
       officiis delectus saepe aliquam cum totam voluptatibus quos recusandae!
     </p>
-    <h2>Nejaky nadpis</h2>
+    <h2>Working with variables</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eligendi?
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit
